Add index page layout

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,10 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+/media/
+/.idea/.gitignore
+/.idea/blog-backend.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
